fix : style checkbox

--- a/bitrix/templates/aspro_max/css/catalog/filter.css
+++ b/bitrix/templates/aspro_max/css/catalog/filter.css
@@ -773,6 +773,7 @@ input[type="radio"] {
     min-height: 21px;
     transition: .3s;
     cursor: pointer;
+    break-inside: avoid;
 }
 
 .checkbox-label:before {
